# monstermash

./: .pre-commit-config.yaml  404.html  COVERAGE.txt  LICENSE  Makefile  README.md  gen_pages.py  index.html  mkdocs.yaml  objects.inv  pyproject.toml  requirements.txt  setup.cfg  setup.py
.claude/skills/conduit-core/: SKILL.md
.claude/skills/conduit-py/: SKILL.md
.claude/skills/domain-doc/: SKILL.md
.claude/skills/ship-and-watch/: SKILL.md
.github/: CODEOWNERS  dependabot.yaml
.github/workflows/: build-test.yaml  publish-to-pypi-deploy-docs.yaml  publish-to-pypi.yaml
contributing/: index.html
docker/ci/: docker-compose.yaml  run-tests.sh
docs/: gen_pages.py  index.md  usage.md
docs/SUMMARY/: index.html
docs/domain/: cryptography.md
docs/monstermash/config/: index.html
docs/monstermash/crypt/: index.html
docs/monstermash/datamodels/: index.html
docs/monstermash/keys/: index.html
docs/monstermash/mcp_server/: index.html
docs/monstermash/parser/: index.html
docs/monstermash/utils/file/: index.html
domain/cryptography/: index.html
monstermash/: __init__.py  __main__.py  crypt.py
requirements/: all.txt  dev.txt  docs.txt
sample/: encrypted_lyrics.txt  lyrics.txt
search/: search_index.json
src/monstermash/: __init__.py  __main__.py  config.py  crypt.py  datamodels.py  keys.py  mcp_server.py  parser.py
src/monstermash/utils/: file.py
tests/: conftest.py  monstermash-lyrics.txt  sample-data.json  test_config.py  test_crypt.py  test_mcp_server.py  test_parser.py  test_runner.py  test_utils.py  test_version.py
