[tool.poetry]
name = "monstermash"
version = "1.12.0"
description = ""
authors = ["Mitchell Lisle <m.lisle90@gmail.com>"]
readme = "README.md"
packages = [{include = "monstermash", from = "src"}]


[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
pynacl = "^1.5.0"
click = "^8.1.3"
pydantic = "^2.0"
pydantic-settings = "^2.0.0"
cryptography = ">=41.0.2"


[tool.poetry.group.dev.dependencies]
bumpversion = "^0.6.0"
twine = "^4.0.2"
flake8 = "^6.0.0"
dlint = "^0.14.0"
mypy = "^1.1.1"
pre-commit = "^3.2.1"
setuptools = ">=67.6,<69.0"
flake8-bugbear = "^23.3.23"
pep8-naming = "^0.13.3"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.1.4"
mkdocs-gen-files = ">=0.4,<0.6"
mkdocs-literate-nav = "^0.6.0"
mkdocstrings = {extras = ["python"], version = ">=0.20,<0.24"}
mkautodoc = "^0.2.0"
pymdown-extensions = "^10.0.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
pytest-dotenv = "^0.5.2"
pytest-cov = "^4.0.0"
scipy = "^1.10.1"
hypothesis = "^6.79.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
monstermash = { callable = "monstermash.__main__:mash"}
mash = { callable = "monstermash.__main__:mash"}

[tool.ruff]
# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E", "F"]
ignore = []

fixable = ["ALL"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "dist",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "tests"
]
line-length = 120